--- a/publications.html
+++ b/publications.html
@@ -29,18 +29,19 @@
     <div id="site_content">
 
 <div id="content" style="width: 800px;">
-  <!--<h2>Preprints</h2>
+  <h2>Preprints</h2>
   <ul style="list-style: none;">
-  </ul>-->
+    <li><strong>Optimal Heaviest Induced Ancestors</strong> [<a href="http://arxiv.org/abs/2302.01373">arxiv</a>]<br>P. Charalampopoulos, B. Dudek, P. Gawrychowski, K. Pokorski.</li>
+  </ul>
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
     <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="papers/Shallow_TED.pdf">pdf</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
-      <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br>
-      <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 290–302.</li>
-    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>]
-      <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>
-      <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 3-15. <b><font color="red">Best Paper Award</font></b></li>
+    <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br>
+    <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 290–302.</li>
+    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>] <!--[<a href="papers/Sub_Covers.pdf">pdf</a>]-->
+    <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>
+    <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 3-15. <b><font color="red">Best Paper Award</font></b></li>
     <li><strong>Faster Pattern Matching Under Edit Distance:</strong> [<a href="https://doi.org/10.1109/FOCS54457.2022.00072">doi</a>] [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>] [<a href="slides/PM_ED.pdf">slides</a>]
     <br><strong>A Reduction to Dynamic Puzzle Matching and the Seaweed Monoid of Permutation Matrices</strong>
     <br>P. Charalampopoulos, T. Kociumaka, P. Wellnitz
