--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
     <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="papers/Shallow_TED.pdf">pdf</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br>
     <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 290–302.</li>
-    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>] <!--[<a href="papers/Sub_Covers.pdf">pdf</a>]-->
+    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>] [<a href="papers/Subseq_Covers.pdf">pdf</a>]
     <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>
     <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 3-15. <b><font color="red">Best Paper Award</font></b></li>
     <li><strong>Faster Pattern Matching Under Edit Distance:</strong> [<a href="https://doi.org/10.1109/FOCS54457.2022.00072">doi</a>] [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>] [<a href="slides/PM_ED.pdf">slides</a>]
