--- a/activities.html
+++ b/activities.html
@@ -81,6 +81,7 @@
 
   <h2>Other Academic Service</h2>
 	<ul>
+        <li>I am honoured to serve on the PC of the 30th International Symposium on String Processing and Information Retrieval (<a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a>).</li>
         <li>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</li>
         <li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
         <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
