--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <p>I completed my Ph.D. studies in Computer Science in the <a href="https://www.kcl.ac.uk/informatics/">Department of Informatics</a> at <a href="http://www.kcl.ac.uk/">King's College London</a> under the supervision of <a href="https://nms.kcl.ac.uk/tomasz.radzik/">Tomasz Radzik</a> and <a href="https://homepages.cwi.nl/~solon/">Solon P. Pissis</a>.
         During my Ph.D. studies, I completed a 6-month research internship in the <a href="http://en.uw.edu.pl/tag/informatics/">Institute of Informatics</a> at the <a href="http://en.uw.edu.pl/">University of Warsaw</a> under the supervision of <a href="https://www.mimuw.edu.pl/~jrad/">Jakub Radoszewski</a> and a 5-month research internship at IDC Herzliya.</p>
 
-        <h4>Summer school:</h4>
+        <h4>Summer school at École normale supérieure, Paris:</h4>
 
-        <p><a href="https://karel-brinda.github.io/">Karel Břinda</a> and I will deliver lectures on a two-day summer school organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychoski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a> (24-25 June 2023). See <a href="https://cpm2023.u-pem.fr/summer-school.html">here</a> for details!</p>
+        <p><a href="https://karel-brinda.github.io/">Karel Břinda</a> and I will deliver lectures on a two-day summer school organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a> (24-25 June 2023). See <a href="https://cpm2023.u-pem.fr/summer-school.html">here</a> for details!</p>
 
         <h2>Research Interests</h2>
         
