--- a/publications.html
+++ b/publications.html
@@ -29,13 +29,12 @@
     <div id="site_content">
 
 <div id="content" style="width: 800px;">
-  <h2>Preprints</h2>
-  <ul style="list-style: none;">
-    <li><strong>Optimal Heaviest Induced Ancestors</strong> [<a href="http://arxiv.org/abs/2302.01373">arxiv</a>]<br>P. Charalampopoulos, B. Dudek, P. Gawrychowski, K. Pokorski.</li>
-  </ul>
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+
+    <li><strong>Optimal Heaviest Induced Ancestors</strong> [<a href="http://arxiv.org/abs/2302.01373">arxiv</a>]<br>P. Charalampopoulos, B. Dudek, P. Gawrychowski, K. Pokorski.<br>
+    <a href="https://cpm2023.u-pem.fr/">CPM 2023</a>.</li>
     <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="papers/Shallow_TED.pdf">pdf</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br>
     <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 290-302.</li>
@@ -94,7 +93,7 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
-    <li><strong>Almost Optimal Exact Distance Oracles for Planar Graphs</strong> [<a href="papers/Distance_Oracles_JV.pdf">pdf</a>]
+    <li><strong>Almost Optimal Exact Distance Oracles for Planar Graphs</strong> [<a href="https://doi.org/10.1145/3580474">doi</a>] [<a href="papers/Distance_Oracles_JV.pdf">pdf</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, Y. Long, S. Mozes, S. Pettie, O. Weimann, C. Wulff-Nilsen<br> Journal of the ACM 70(2): 12:1–12:50.</li>
     <li><strong>Internal Shortest Absent Word Queries in Constant Time and Linear Space</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.04.029">doi</a>] [<a href="https://arxiv.org/abs/2106.01763">arxiv</a>]<br>G. Badkobeh, P. Charalampopoulos, D. Kosolobov, S. P. Pissis<br> Theoretical Computer Science 922: 271-282 (2022).</li>
     <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.03.020">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
