--- a/teaching.html
+++ b/teaching.html
@@ -42,7 +42,7 @@
 
     <div id="content">
         <h2>Birkbeck, University of London</h2>
-        <p>Together with Irene Muzi: <strong><a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a></strong>.</p>
+        <p>Irene Muzi and I are module convenors for <strong><a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a></strong>.</p>
       </div>
 
     <div id="content">
