--- a/publications.html
+++ b/publications.html
@@ -33,8 +33,8 @@
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
 
-    <li><strong>Optimal Near-Linear Space Heaviest Induced Ancestors</strong> [<a href="http://arxiv.org/abs/2302.01373">arxiv</a>]<br>P. Charalampopoulos, B. Dudek, P. Gawrychowski, K. Pokorski.<br>
-    <a href="https://cpm2023.u-pem.fr/">CPM 2023</a>.</li>
+    <li><strong>Optimal Near-Linear Space Heaviest Induced Ancestors</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2023.8">doi</a>] [<a href="http://arxiv.org/abs/2302.01373">arxiv</a>]<br>P. Charalampopoulos, B. Dudek, P. Gawrychowski, K. Pokorski.<br>
+    <a href="https://cpm2023.u-pem.fr/">CPM 2023</a>: 8:1-8:18.</li>
     <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="papers/Shallow_TED.pdf">pdf</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br>
     <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 290-302.</li>
