--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>] [<a href="papers/Subseq_covers.pdf">pdf</a>]
     <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>
     <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 3-15. <b><font color="red">Best Paper Award</font></b></li>
-    <li><strong>Faster Pattern Matching Under Edit Distance:</strong> [<a href="https://doi.org/10.1109/FOCS54457.2022.00072">doi</a>] [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>] [<a href="slides/PM_ED.pdf">slides</a>]
+    <li><strong>Faster Pattern Matching Under Edit Distance:</strong> [<a href="https://doi.org/10.1109/FOCS54457.2022.00072">doi</a>] [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>] [<a href="slides/PM_ED.pdf">slides</a>] [<a href="https://vimeo.com/user39621409/review/768767375/b33a5750bc">talk</a> at 42:50]
     <br><strong>A Reduction to Dynamic Puzzle Matching and the Seaweed Monoid of Permutation Matrices</strong>
     <br>P. Charalampopoulos, T. Kociumaka, P. Wellnitz
     <br><a href="https://focs2022.eecs.berkeley.edu/">FOCS 2022</a>: 710-719.</li>
