--- a/teaching.html
+++ b/teaching.html
@@ -40,9 +40,12 @@
     p.charalampopoulos[at]bbk.ac.uk <br/>
   </div>
 
-    [<a href="slides/Summer_school_slides_APM.pdf">Slides</a>] from my lecture at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a>\ organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.
+    <a href="slides/Summer_school_slides_APM.pdf">Slides</a> from my lecture at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a>\organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.
 
     <div id="content">
+        <br>
+        <p><a href="slides/Summer_school_slides_APM.pdf">Slides</a> from my lecture at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a>\organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.</p>
+
         <h2>Birkbeck, University of London</h2>
         <p>Irene Muzi and I are module convenors for <strong><a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a></strong>.</p>
       </div>
