--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     <div id="content">
       <br>
-        <p>I am a Lecturer in the <a href="https://www.dcs.bbk.ac.uk/">Department of Computer Science and Information Systems</a> at <a href="https://www.bbk.ac.uk/">Birkbeck, University of London</a>.</p>
+        <p>I am a Lecturer in the <a href="https://www.dcs.bbk.ac.uk/">School of Computing and Mathematical Sciences</a> at <a href="https://www.bbk.ac.uk/">Birkbeck, University of London</a>.</p>
 
         <p>Prior to that, I was a postdoctoral fellow in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at <a href="https://www.idc.ac.il/en/pages/home.aspx">Reichman University</a> (IDC Herzliya) under the supervision of <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
 
