dept update, convenor

--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
   <div class="sidebar">
     <img src="images/Panos.jpg" width=190px/>
     <h4>Address</h4>
-    Department of Computer Science and Information Systems<br/>
+    Department of Computer Science and Mathematical Sciences<br/>
     Birkbeck, University of London<br/>
     Malet Street<br/>
     London WC1E 7HX<br/>
@@ -45,7 +45,7 @@
         <p><strong><a href="slides/Summer_school_slides_APM.pdf">Slides</a></strong> from my lecture on "Structural analysis of approximate pattern matching and algorithmic applications" at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a> organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.</p>
 
         <h2>Birkbeck, University of London</h2>
-        <p>Irene Muzi and I are module convenors for <strong><a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a></strong>.</p>
+        <p>I am the module convenor for <strong><a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a></strong>.</p>
       </div>
 
     <div id="content">
