--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="sidebar">
   <img src="images/Panos.jpg" width=190px/>
 	<h4>Address</h4>
-	Department of Computer Science and Information Systems<br/>
+	Department of Computer Science and Mathematical Sciences<br/>
   Birkbeck, University of London<br/>
   Malet Street<br/>
   London WC1E 7HX<br/>
