--- a/activities.html
+++ b/activities.html
@@ -31,7 +31,7 @@
   <div class="sidebar">
     <img src="images/Panos.jpg" width=190px/>
     <h4>Address</h4>
-    Department of Computer Science and Mathematical Sciences<br/>
+    School of Computing and Mathematical Sciences<br/>
     Birkbeck, University of London<br/>
     Malet Street<br/>
     London WC1E 7HX<br/>
@@ -40,6 +40,19 @@
   </div>
 
     <div id="content">
+
+
+  <h2>Program Committees and Editorial Work</h2>
+  <ul>
+        <li>I am honoured to serve on the PC of the 35th Annual Symposium on Combinatorial Pattern Matching (<a href="https://cpm2024.github.io/index.html/">CPM 2024</a>).</li>
+        <li>I served on the PCs of <a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a> and <a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>.</li>
+        <li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
+        <!-- <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
+        <li>Member of the Organising Committee for the 16th International Symposium on Experimental Algorithms (<a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>).</li>
+        <li>Member of the Organising Committee for London Stringology Days/London Algorithmic Workshop (<a href='http://www.inf.kcl.ac.uk/events/LSD&LAW17/'>LSD &amp; LAW 2017</a>).</li>
+        <li>1st/2nd year Ph.D. students' Representative} in the Staff Student Liaison Committee, Department of Informatics, King's College London.</li>-->
+  </ul>
+
   <h2>Reviewing Duties</h2>
       <p>Conferences:
         <a href='http://acm-stoc.org/stoc2024/index.html'>STOC 2024</a>,
@@ -71,6 +84,7 @@
       </p>
 
       <p>Journals:
+        <a href='https://dl.acm.org/journal/talg'>ACM Transactions on Algorithms</a>,
         <a href='https://www.springer.com/journal/224'>Theory of Computing Systems</a>,
         <a href='https://www.journals.elsevier.com/theoretical-computer-science'>Theoretical Computer Science</a>,
         <a href='https://www.journals.elsevier.com/information-processing-letters'>Information Processing Letters</a>,
@@ -78,16 +92,3 @@
         <a href='https://onlinelibrary.wiley.com/journal/1097024x'>Software: Practice and Experience</a>,
         <a href='https://academic.oup.com/comjnl/'>The Computer Journal</a>.
       </p>
-
-
-  <h2>Other Academic Service</h2>
-	<ul>
-        <li>I am honoured to serve on the PC of the 35th Annual Symposium on Combinatorial Pattern Matching (<a href="https://cpm2024.github.io/index.html/">CPM 2024</a>).</li>
-        <li>I served on the PC of the 30th International Symposium on String Processing and Information Retrieval (<a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a>).</li>
-        <li>I served on the PC of the 31st Annual Symposium on Combinatorial Pattern Matching (<a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>).</li>
-        <li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
-        <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
-        <li>Member of the Organising Committee for the 16th International Symposium on Experimental Algorithms (<a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>).</li>
-        <li>Member of the Organising Committee for London Stringology Days/London Algorithmic Workshop (<a href='http://www.inf.kcl.ac.uk/events/LSD&LAW17/'>LSD &amp; LAW 2017</a>).</li>
-        <li>1st/2nd year Ph.D. students' Representative} in the Staff Student Liaison Committee, Department of Informatics, King's College London.</li>
-	</ul>
