--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
   <div class="sidebar">
     <img src="images/Panos.jpg" width=190px/>
     <h4>Address</h4>
-    Department of Computer Science and Mathematical Sciences<br/>
+    School of Computing and Mathematical Sciences<br/>
     Birkbeck, University of London<br/>
     Malet Street<br/>
     London WC1E 7HX<br/>
