--- a/publications.html
+++ b/publications.html
@@ -126,5 +126,6 @@
     <li><strong>On avoided words, absent words, and their application to biological sequence analysis</strong> [<a href="http://dx.doi.org/10.1186/s13015-017-0094-z">doi</a>] [<a href="https://arxiv.org/abs/1604.08760">arxiv</a>]<br> Y. Almirantis, P. Charalampopoulos, J. Gao, C. S. Iliopoulos, M. Mohamed, S. P. Pissis, D. Polychronopoulos<br> Algorithms for Molecular Biology 12(1): 5:1-5:12 (2017).</li>
   </ul>
 </div>
+</div>
 </body>
 </html>
