--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
 
-    <li><strong>Approximate Circular Pattern Matching under Edit Distance</strong> <br>
+    <li><strong>Approximate Circular Pattern Matching under Edit Distance</strong> [<a href="https://arxiv.org/abs/2402.14550">arxiv</a>] <br>
     P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba <br>
     <a href="https://stacs2024.limos.fr/">STACS 2024</a>.</li>
     <li><strong>Optimal Near-Linear Space Heaviest Induced Ancestors</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2023.8">doi</a>] [<a href="http://arxiv.org/abs/2302.01373">arxiv</a>]<br>P. Charalampopoulos, B. Dudek, P. Gawrychowski, K. Pokorski<br>
