--- a/publications.html
+++ b/publications.html
@@ -104,9 +104,9 @@
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
     <li><strong>Pattern Masking for Dictionary Matching: Theory and Practice</strong> [<a href="https://doi.org/10.1007/s00453-024-01213-8">doi</a>] [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br>
-      P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis, J. Radoszewski<br> Algorithmica.</li>
+      P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis, J. Radoszewski<br> Algorithmica (2024).</li>
     <li><strong>Almost Optimal Exact Distance Oracles for Planar Graphs</strong> [<a href="https://doi.org/10.1145/3580474">doi</a>] [<a href="papers/Distance_Oracles_JV.pdf">pdf</a>]
-    <br>P. Charalampopoulos, P. Gawrychowski, Y. Long, S. Mozes, S. Pettie, O. Weimann, C. Wulff-Nilsen<br> Journal of the ACM 70(2): 12:1–12:50.</li>
+    <br>P. Charalampopoulos, P. Gawrychowski, Y. Long, S. Mozes, S. Pettie, O. Weimann, C. Wulff-Nilsen<br> Journal of the ACM 70(2): 12:1–12:50 (2023).</li>
     <li><strong>Internal Shortest Absent Word Queries in Constant Time and Linear Space</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.04.029">doi</a>] [<a href="https://arxiv.org/abs/2106.01763">arxiv</a>]<br>G. Badkobeh, P. Charalampopoulos, D. Kosolobov, S. P. Pissis<br> Theoretical Computer Science 922: 271-282 (2022).</li>
     <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.03.020">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
     <br>A. Bar-Natan, P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> Theoretical Computer Science 918: 48-59 (2022).</li>
