--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 
     <li><strong>Approximate Circular Pattern Matching under Edit Distance</strong> [<a href="https://doi.org/10.4230/LIPIcs.STACS.2024.24">doi</a>] [<a href="https://arxiv.org/abs/2402.14550">arxiv</a>] <br>
     P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba <br>
-    <a href="https://stacs2024.limos.fr/">STACS 2024</a>.</li>
+    <a href="https://stacs2024.limos.fr/">STACS 2024</a>: 24:1-24:22.</li>
     <li><strong>Optimal Near-Linear Space Heaviest Induced Ancestors</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2023.8">doi</a>] [<a href="http://arxiv.org/abs/2302.01373">arxiv</a>]<br>P. Charalampopoulos, B. Dudek, P. Gawrychowski, K. Pokorski<br>
     <a href="https://cpm2023.u-pem.fr/">CPM 2023</a>: 8:1-8:18.</li>
     <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="papers/Shallow_TED.pdf">pdf</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
