--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,8 @@
   <h2>Preprints</h2>
   <ul style="list-style: none;">
 
+    <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
+      P. Charalampopoulos, P. Gawrychowski, S. Ghazawi.<br>
     <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya.<br>
   </ul>
