--- a/activities.html
+++ b/activities.html
@@ -44,7 +44,7 @@
 
   <h2>Program Committees and Editorial Work</h2>
   <ul>
-        <li>I am honoured to serve on the PCs of the 32nd Annual European Symposium on Algorithms (<a href="https://algo-conference.org/2024/esa/">ESA 2024</a>), Track A, 35th Annual Symposium on Combinatorial Pattern Matching (<a href="https://cpm2024.github.io/">CPM 2024</a>), and the 24th Workshop on Algorithms in Bioinformatics (<a href="https://algo-conference.org/2024/wabi/">WABI 2024</a>).</li>
+        <li>I am honoured to serve on the PCs of the 32nd Annual European Symposium on Algorithms (<a href="https://algo-conference.org/2024/esa/">ESA 2024</a>), Track A, the 35th Annual Symposium on Combinatorial Pattern Matching (<a href="https://cpm2024.github.io/">CPM 2024</a>), and the 24th Workshop on Algorithms in Bioinformatics (<a href="https://algo-conference.org/2024/wabi/">WABI 2024</a>).</li>
         <li>I served on the PCs of <a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a> and <a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>.</li>
         <li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
         <!-- <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
@@ -55,6 +55,7 @@
 
   <h2>Reviewing Duties</h2>
       <p>Conferences:
+        <a href='https://compose.ioc.ee/icalp2024/#icalp'>ICALP 2024</a>,
         <a href='http://acm-stoc.org/stoc2024/index.html'>STOC 2024</a>,
         <a href='http://acm-stoc.org/stoc2023/'>STOC 2023</a>,
         <a href='https://siam.org/conferences/cm/conference/soda23'>SODA 2023</a>,
