--- a/activities.html
+++ b/activities.html
@@ -55,6 +55,7 @@
 
   <h2>Reviewing Duties</h2>
       <p>Conferences:
+        <a href='https://events.gwdg.de/event/576/'>DLT 2024</a>,
         <a href='https://compose.ioc.ee/icalp2024/#icalp'>ICALP 2024</a>,
         <a href='http://acm-stoc.org/stoc2024/index.html'>STOC 2024</a>,
         <a href='http://acm-stoc.org/stoc2023/'>STOC 2023</a>,
