--- a/publications.html
+++ b/publications.html
@@ -34,14 +34,20 @@
   <ul style="list-style: none;">
 
     <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
-      P. Charalampopoulos, P. Gawrychowski, S. Ghazawi.<br>
+      P. Charalampopoulos, P. Gawrychowski, S. Ghazawi.</li>
     <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
-    G. Bathie, P. Charalampopoulos, T. Starikovskaya.<br>
+    G. Bathie, P. Charalampopoulos, T. Starikovskaya.</li>
   </ul>
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
 
+    <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong><br>
+    H. Bannai, P. Charalampopoulos, J. Radoszewski.<br>
+    <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
+    <li><strong>Internal Pattern Matching in Small Space and Applications</strong><br>
+    G. Bathie, P. Charalampopoulos, T. Starikovskaya.<br>
+    <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
     <li><strong>Approximate Circular Pattern Matching under Edit Distance</strong> [<a href="https://doi.org/10.4230/LIPIcs.STACS.2024.24">doi</a>] [<a href="https://arxiv.org/abs/2402.14550">arxiv</a>] <br>
     P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba <br>
     <a href="https://stacs2024.limos.fr/">STACS 2024</a>: 24:1-24:22.</li>
