--- a/publications.html
+++ b/publications.html
@@ -43,13 +43,13 @@
   <ul style="list-style: none;">
 
     <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong><br>
-    H. Bannai, P. Charalampopoulos, J. Radoszewski.<br>
+    H. Bannai, P. Charalampopoulos, J. Radoszewski<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
     <li><strong>Internal Pattern Matching in Small Space and Applications</strong><br>
-    G. Bathie, P. Charalampopoulos, T. Starikovskaya.<br>
+    G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
     <li><strong>Approximate Circular Pattern Matching under Edit Distance</strong> [<a href="https://doi.org/10.4230/LIPIcs.STACS.2024.24">doi</a>] [<a href="https://arxiv.org/abs/2402.14550">arxiv</a>] <br>
-    P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba <br>
+    P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>
     <a href="https://stacs2024.limos.fr/">STACS 2024</a>: 24:1-24:22.</li>
     <li><strong>Optimal Near-Linear Space Heaviest Induced Ancestors</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2023.8">doi</a>] [<a href="http://arxiv.org/abs/2302.01373">arxiv</a>]<br>P. Charalampopoulos, B. Dudek, P. Gawrychowski, K. Pokorski<br>
     <a href="https://cpm2023.u-pem.fr/">CPM 2023</a>: 8:1-8:18.</li>
