--- a/publications.html
+++ b/publications.html
@@ -32,9 +32,6 @@
 
   <h2>Preprints</h2>
   <ul style="list-style: none;">
-
-    <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
-      P. Charalampopoulos, P. Gawrychowski, S. Ghazawi.</li>
     <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya.</li>
   </ul>
@@ -42,6 +39,9 @@
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
 
+    <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
+      P. Charalampopoulos, P. Gawrychowski, S. Ghazawi<br>
+    <a href="https://compose.ioc.ee/icalp2024/">ICALP 2024</a>.</li>
     <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong><br>
     H. Bannai, P. Charalampopoulos, J. Radoszewski<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
