--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
     <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
       P. Charalampopoulos, P. Gawrychowski, S. Ghazawi<br>
     <a href="https://compose.ioc.ee/icalp2024/">ICALP 2024</a>.</li>
-    <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong><br>
+    <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong><br> [<a href="papers/Semi_dynamic_LZ77.pdf">pdf</a>]
     H. Bannai, P. Charalampopoulos, J. Radoszewski<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
     <li><strong>Internal Pattern Matching in Small Space and Applications</strong><br>
