--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
     <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong> [<a href="papers/Semi_dynamic_LZ77.pdf">pdf</a>]<br>
     H. Bannai, P. Charalampopoulos, J. Radoszewski<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
-    <li><strong>Internal Pattern Matching in Small Space and Applications</strong><br>
+    <li><strong>Internal Pattern Matching in Small Space and Applications</strong> [<a href="https://arxiv.org/abs/2404.17502">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
     <li><strong>Approximate Circular Pattern Matching under Edit Distance</strong> [<a href="https://doi.org/10.4230/LIPIcs.STACS.2024.24">doi</a>] [<a href="https://arxiv.org/abs/2402.14550">arxiv</a>] <br>
