--- a/publications.html
+++ b/publications.html
@@ -44,10 +44,10 @@
     <a href="https://compose.ioc.ee/icalp2024/">ICALP 2024</a>.</li>
     <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong> [<a href="papers/Semi_dynamic_LZ77.pdf">pdf</a>]<br>
     H. Bannai, P. Charalampopoulos, J. Radoszewski<br>
-    <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
+    <a href="https://cpm2024.github.io">CPM 2024</a>: 3:1-3:20.</li>
     <li><strong>Internal Pattern Matching in Small Space and Applications</strong> [<a href="https://arxiv.org/abs/2404.17502">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
-    <a href="https://cpm2024.github.io">CPM 2024</a>.</li>
+    <a href="https://cpm2024.github.io">CPM 2024</a>: 4:1-4:20.</li>
     <li><strong>Approximate Circular Pattern Matching under Edit Distance</strong> [<a href="https://doi.org/10.4230/LIPIcs.STACS.2024.24">doi</a>] [<a href="https://arxiv.org/abs/2402.14550">arxiv</a>] <br>
     P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>
     <a href="https://stacs2024.limos.fr/">STACS 2024</a>: 24:1-24:22.</li>
