--- a/publications.html
+++ b/publications.html
@@ -42,10 +42,10 @@
     <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
       P. Charalampopoulos, P. Gawrychowski, S. Ghazawi<br>
     <a href="https://compose.ioc.ee/icalp2024/">ICALP 2024</a>.</li>
-    <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong> [<a href="papers/Semi_dynamic_LZ77.pdf">pdf</a>]<br>
+    <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2024.3">doi</a>]<br>
     H. Bannai, P. Charalampopoulos, J. Radoszewski<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>: 3:1-3:20.</li>
-    <li><strong>Internal Pattern Matching in Small Space and Applications</strong> [<a href="https://arxiv.org/abs/2404.17502">arxiv</a>]<br>
+    <li><strong>Internal Pattern Matching in Small Space and Applications</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2024.4">doi</a>] [<a href="https://arxiv.org/abs/2404.17502">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>: 4:1-4:20.</li>
     <li><strong>Approximate Circular Pattern Matching under Edit Distance</strong> [<a href="https://doi.org/10.4230/LIPIcs.STACS.2024.24">doi</a>] [<a href="https://arxiv.org/abs/2402.14550">arxiv</a>] <br>
