--- a/publications.html
+++ b/publications.html
@@ -30,11 +30,11 @@
 
 <div id="content" style="width: 800px;">
 
-  <h2>Preprints</h2>
+  <!--<h2>Preprints</h2>
   <ul style="list-style: none;">
     <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya.</li>
-  </ul>
+  </ul>-->
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
