--- a/publications.html
+++ b/publications.html
@@ -45,9 +45,9 @@
     <li><strong>Longest Common Extensions with Wildcards: Trade-off and Applications</strong><br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>.</li>
-    <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
+    <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2024.39">doi</a>] [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
     P. Charalampopoulos, P. Gawrychowski, S. Ghazawi<br>
-    <a href="https://compose.ioc.ee/icalp2024/">ICALP 2024</a>.</li>
+    <a href="https://compose.ioc.ee/icalp2024/">ICALP 2024</a>: 39:1-39:17.</li>
     <li><strong>Maintaining the Size of LZ77 on Semi-dynamic Strings</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2024.3">doi</a>]<br>
     H. Bannai, P. Charalampopoulos, J. Radoszewski<br>
     <a href="https://cpm2024.github.io">CPM 2024</a>: 3:1-3:20.</li>
