--- a/activities.html
+++ b/activities.html
@@ -44,9 +44,11 @@
 
   <h2>Program Committees and Editorial Work</h2>
   <ul>
-        <li>I am honoured to serve on the PCs of the 32nd Annual European Symposium on Algorithms (<a href="https://algo-conference.org/2024/esa/">ESA 2024</a>), Track A, the 22nd Workshop on Approximation and Online Algorithms (<a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>), and the 24th Workshop on Algorithms in Bioinformatics (<a href="https://algo-conference.org/2024/wabi/">WABI 2024</a>).</li>
+        <li>I am honoured to serve on the PC of the 22nd Workshop on Approximation and Online Algorithms (<a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>).</li>
         <li>I served on the PCs of
+          <a href="https://algo-conference.org/2024/esa/">ESA 2024</a> (Track A),
           <a href="https://cpm2024.github.io/">CPM 2024</a>,
+          <a href="https://algo-conference.org/2024/wabi/">WABI 2024</a>,
           <a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a>,
           and <a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>.</li>
         <li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
