--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
     <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>.</li>
-    <li><strong>Longest Common Extensions with Wildcards: Trade-off and Applications</strong><br>
+    <li><strong>Longest Common Extensions with Wildcards: Trade-off and Applications</strong> [<a href="https://arxiv.org/abs/2408.03610">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>.</li>
     <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2024.39">doi</a>] [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
