--- a/publications.html
+++ b/publications.html
@@ -39,12 +39,12 @@
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
 
-    <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
+    <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2024.20">doi</a>] [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
-    <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>.</li>
-    <li><strong>Longest Common Extensions with Wildcards: Trade-off and Applications</strong> [<a href="https://arxiv.org/abs/2408.03610">arxiv</a>]<br>
+    <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>: 20:1-20:15.</li>
+    <li><strong>Longest Common Extensions with Wildcards: Trade-off and Applications</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2024.19">doi</a>] [<a href="https://arxiv.org/abs/2408.03610">arxiv</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
-    <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>.</li>
+    <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>: 19:1-19:17.</li>
     <li><strong>Optimal Bounds for Distinct Quartics</strong> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2024.39">doi</a>] [<a href="https://arxiv.org/abs/2403.06667">arxiv</a>]<br>
     P. Charalampopoulos, P. Gawrychowski, S. Ghazawi<br>
     <a href="https://compose.ioc.ee/icalp2024/">ICALP 2024</a>: 39:1-39:17.</li>
