--- a/activities.html
+++ b/activities.html
@@ -44,8 +44,9 @@
 
   <h2>Program Committees and Editorial Work</h2>
   <ul>
-        <li>I am honoured to serve on the PC of the 22nd Workshop on Approximation and Online Algorithms (<a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>).</li>
+        <li>I am honoured to serve on the PC of the 50th International Symposium on Mathematical Foundations of Computer Science (MFCS 2025).</li>
         <li>I served on the PCs of
+          <a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>,
           <a href="https://algo-conference.org/2024/esa/">ESA 2024</a> (Track A),
           <a href="https://cpm2024.github.io/">CPM 2024</a>,
           <a href="https://algo-conference.org/2024/wabi/">WABI 2024</a>,
@@ -60,6 +61,8 @@
 
   <h2>Reviewing Duties</h2>
       <p>Conferences:
+        <a href='https://www.siam.org/conferences-events/siam-conferences/sosa25/'>SOSA 2025</a>,
+        <a href='https://www.siam.org/conferences-events/siam-conferences/soda25/'>SODA 2025</a>,
         <a href='https://events.gwdg.de/event/576/'>DLT 2024</a>,
         <a href='https://compose.ioc.ee/icalp2024/#icalp'>ICALP 2024</a>,
         <a href='http://acm-stoc.org/stoc2024/index.html'>STOC 2024</a>,
