--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
 
-    <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2024.20">doi</a>] [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
+    <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2024.20">doi</a>] [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>] [<a href="slides/PM_HD_wildcards.pdf">slides</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>: 20:1-20:15.</li>
     <li><strong>Longest Common Extensions with Wildcards: Trade-off and Applications</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2024.19">doi</a>] [<a href="https://arxiv.org/abs/2408.03610">arxiv</a>]<br>
