--- a/activities.html
+++ b/activities.html
@@ -44,7 +44,7 @@
 
   <h2>Program Committees and Editorial Work</h2>
   <ul>
-        <li>I am honoured to serve on the PC of the 50th International Symposium on Mathematical Foundations of Computer Science (MFCS 2025).</li>
+        <li>I am honoured to serve on the PCs of the 50th International Symposium on Mathematical Foundations of Computer Science (MFCS 2025) and the 36th Annual Symposium on Combinatorial Pattern Matching (CPM 2025).</li>
         <li>I served on the PCs of
           <a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>,
           <a href="https://algo-conference.org/2024/esa/">ESA 2024</a> (Track A),
