--- a/teaching.html
+++ b/teaching.html
@@ -42,7 +42,7 @@
 
     <div id="content">
         <br>
-        <p><strong><a href="slides/Summer_school_slides_APM.pdf">Slides</a></strong> from my lecture on "Structural analysis of approximate pattern matching and algorithmic applications" at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a> organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.</p>
+        <p><strong><a href="slides/Summer_school_slides_APM.pdf">Slides</a></strong> from my lectures on "Structural analysis of approximate pattern matching and algorithmic applications" at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a> organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.</p>
 
         <h2>Birkbeck, University of London</h2>
         <p>I am the module convenor for <strong><a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a></strong>.</p>
