--- a/activities.html
+++ b/activities.html
@@ -61,6 +61,7 @@
 
   <h2>Reviewing Duties</h2>
       <p>Conferences:
+        <a href='https://stacs2025.de/'>STACS 2025</a>,
         <a href='https://www.siam.org/conferences-events/siam-conferences/sosa25/'>SOSA 2025</a>,
         <a href='https://www.siam.org/conferences-events/siam-conferences/soda25/'>SODA 2025</a>,
         <a href='https://events.gwdg.de/event/576/'>DLT 2024</a>,
