--- a/activities.html
+++ b/activities.html
@@ -44,8 +44,9 @@
 
   <h2>Program Committees and Editorial Work</h2>
   <ul>
-        <li>I am honoured to serve on the PCs of the 50th International Symposium on Mathematical Foundations of Computer Science (<a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a>) and the 36th Annual Symposium on Combinatorial Pattern Matching (<a href="https://cpm2025.pangenome.eu/">CPM 2025</a>).</li>
+        <li>I am honoured to serve on the PCs of the 50th International Symposium on Mathematical Foundations of Computer Science (<a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a>) and the 25th WABI Conference on Algorithms in Bioinformatics (<a href="https://cpm2025.pangenome.eu/">WABI 2025</a>).</li>
         <li>I served on the PCs of
+          <a href="https://cpm2025.pangenome.eu/">CPM 2025</a>,
           <a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>,
           <a href="https://algo-conference.org/2024/esa/">ESA 2024</a> (Track A),
           <a href="https://cpm2024.github.io/">CPM 2024</a>,
