--- a/publications.html
+++ b/publications.html
@@ -117,6 +117,8 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
+    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1016/j.tcs.2025.115216">doi</a>]
+    <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br> Theoretical Computer Science 1041 (2025).</li>
     <li><strong>Pattern Masking for Dictionary Matching: Theory and Practice</strong> [<a href="https://doi.org/10.1007/s00453-024-01213-8">doi</a>] [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br>
       P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis, J. Radoszewski<br> Algorithmica 86: 1948–1978 (2024).</li>
     <li><strong>Almost Optimal Exact Distance Oracles for Planar Graphs</strong> [<a href="https://doi.org/10.1145/3580474">doi</a>] [<a href="papers/Distance_Oracles_JV.pdf">pdf</a>]
