--- a/activities.html
+++ b/activities.html
@@ -44,8 +44,9 @@
 
   <h2>Program Committees and Editorial Work</h2>
   <ul>
-        <li>I am honoured to serve on the PCs of the 50th International Symposium on Mathematical Foundations of Computer Science (<a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a>), the 32nd International Symposium on String Processing and Information Retrieval (<a href="https://sites.google.com/view/spire-2025/home">SPIRE 2025</a>), and the 25th WABI Conference on Algorithms in Bioinformatics (<a href="https://cpm2025.pangenome.eu/">WABI 2025</a>).</li>
-        <li>I served on the PCs of
+        <li> I am a member of the editorial board of <a href="https://link.springer.com/journal/11786">Mathematics in Computer Science}</a>.
+        <li> I am honoured to serve on the program committees of <a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a>, <a href="https://sites.google.com/view/spire-2025/home">SPIRE 2025</a>, and <a href="https://wabiconf.github.io/2025//">WABI 2025</a>.</li>
+        <li>I served on the program committees of
           <a href="https://cpm2025.pangenome.eu/">CPM 2025</a>,
           <a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>,
           <a href="https://algo-conference.org/2024/esa/">ESA 2024</a> (Track A),
@@ -53,13 +54,14 @@
           <a href="https://algo-conference.org/2024/wabi/">WABI 2024</a>,
           <a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a>,
           and <a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>.</li>
-        <li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
-        <!-- <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
+        <!--<li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
+        <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
         <li>Member of the Organising Committee for the 16th International Symposium on Experimental Algorithms (<a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>).</li>
         <li>Member of the Organising Committee for London Stringology Days/London Algorithmic Workshop (<a href='http://www.inf.kcl.ac.uk/events/LSD&LAW17/'>LSD &amp; LAW 2017</a>).</li>
         <li>1st/2nd year Ph.D. students' Representative} in the Staff Student Liaison Committee, Department of Informatics, King's College London.</li>-->
   </ul>
 
+  <!-- 
   <h2>Reviewing Duties</h2>
       <p>Conferences:
         <a href='https://stacs2025.de/'>STACS 2025</a>,
@@ -104,3 +106,4 @@
         <a href='https://onlinelibrary.wiley.com/journal/1097024x'>Software: Practice and Experience</a>,
         <a href='https://academic.oup.com/comjnl/'>The Computer Journal</a>.
       </p>
+    -->
