--- a/activities.html
+++ b/activities.html
@@ -45,8 +45,8 @@
   <h2>Program Committees and Editorial Work</h2>
   <ul>
         <li> I am a member of the editorial board of <a href="https://link.springer.com/journal/11786">Mathematics in Computer Science</a>.
-        <li> I am honoured to serve on the program committees of <a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a>, <a href="https://sites.google.com/view/spire-2025/home">SPIRE 2025</a>, and <a href="https://wabiconf.github.io/2025//">WABI 2025</a>.</li>
-        <li>I served on the program committees of
+        <li> I am honoured to serve in the program committees of <a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a>, <a href="https://sites.google.com/view/spire-2025/home">SPIRE 2025</a>, and <a href="https://wabiconf.github.io/2025//">WABI 2025</a>.</li>
+        <li>I served in the program committees of
           <a href="https://cpm2025.pangenome.eu/">CPM 2025</a>,
           <a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>,
           <a href="https://algo-conference.org/2024/esa/">ESA 2024</a> (Track A),
