--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
       <div class="sidebar">
   <img src="images/Panos.jpg" width=190px/>
 	<h4>Address</h4>
-	School of Computing and Mathematical Sciences<br/>
-  Birkbeck, University of London<br/>
-  Malet Street<br/>
-  London WC1E 7HX<br/>
+	Department of Informatics<br/>
+  King's College London<br/>
+  Bush House, 30 Aldwych,<br/>
+  London, WC2B 4BG<br/>
   <h4>Email</h4>
-  p.charalampopoulos[at]bbk.ac.uk <br/>
+  p.charalampopoulos[at]kcl.ac.uk <br/>
       </div>
     <div id="content">
       <br>
-        <p>I am a Lecturer (Assistant Professor) in the <a href="https://www.bbk.ac.uk/school/computing-and-mathematical-sciences">School of Computing and Mathematical Sciences</a> at <a href="https://www.bbk.ac.uk/">Birkbeck, University of London</a>.</p>
+        <p>I am a Lecturer (Assistant Professor) in the <a href="https://www.kcl.ac.uk/informatics">Department of Informatics</a> at <a href="https://www.kcl.ac.uk/index">King's College London</a>.</p>
 
-        <p>Prior to that, I was a postdoctoral fellow in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at <a href="https://www.idc.ac.il/en/pages/home.aspx">Reichman University</a> (IDC Herzliya) hosted by <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
+        <p>Prior to that, I was a Lecturer in the <a href="https://www.bbk.ac.uk/school/computing-and-mathematical-sciences">School of Computing and Mathematical Sciences</a> at <a href="https://www.bbk.ac.uk/">Birkbeck, University of London</a>. Earlier, I was a postdoctoral fellow in the <a href="https://www.idc.ac.il/en/schools/cs/pages/home.aspx">Efi Arazi School of Computer Science</a> at <a href="https://www.idc.ac.il/en/pages/home.aspx">Reichman University</a> (IDC Herzliya) hosted by <a href="http://www.faculty.idc.ac.il/smozes/">Shay Mozes</a> and <a href="http://www.cs.haifa.ac.il/~oren/index.html">Oren Weimann</a> (<a href="https://www.haifa.ac.il/index.php/en/">University of Haifa</a>).</p>
 
-        <p>I completed my Ph.D. studies in Computer Science in the <a href="https://www.kcl.ac.uk/informatics/">Department of Informatics</a> at <a href="http://www.kcl.ac.uk/">King's College London</a> under the supervision of <a href="https://nms.kcl.ac.uk/tomasz.radzik/">Tomasz Radzik</a> and <a href="https://homepages.cwi.nl/~solon/">Solon P. Pissis</a>.
+        <p>I completed my Ph.D. studies in Computer Science in the Department of Informatics at King's College London under the supervision of <a href="https://nms.kcl.ac.uk/tomasz.radzik/">Tomasz Radzik</a> and <a href="https://homepages.cwi.nl/~solon/">Solon P. Pissis</a>.
         During my Ph.D. studies, I completed a 6-month research internship in the <a href="http://en.uw.edu.pl/tag/informatics/">Institute of Informatics</a> at the <a href="http://en.uw.edu.pl/">University of Warsaw</a> hosted by <a href="https://www.mimuw.edu.pl/~jrad/">Jakub Radoszewski</a> and a 5-month research internship at IDC Herzliya.</p>
 
         <h2>Research Interests</h2>
